Error with the tabs cutting off on lower screen resolutions fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
+body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+}
+
+div {
+    width: 100%;
+    height: 100%;
+}
+
 .background {
  background-image: url(../images/background.jpg);
   -webkit-background-size: cover;
@@ -34,7 +45,7 @@
   cursor: pointer;
   padding: 14px 16px;
   font-size: 17px;
-  width: 33%;
+  width: 33.33%;
 }
 
 /* Change background color of buttons on hover */
